Small fixes for credits out of bounds in footer, SM icons

--- a/src/landing/static/ionescu77.css
+++ b/src/landing/static/ionescu77.css
@@ -204,12 +204,12 @@ ul.social-buttons li a {
     border-color: #f6bf01;
     box-shadow: 0 0 2px 2px #fff;  /* for hollow circle with 3px border*/
     display: block;
-    width: 90px;
-    height: 90px;
+    width: 60px;
+    height: 60px;
     /*border-radius: 50%;*/
-    border-radius: 35px 35px 35px 35px;
-    font-size: 12px;
-    line-height: 90px;
+    border-radius: 20px 20px 20px 20px;
+    font-size: 14px;
+    line-height: 70px;
     outline: 0;
     color: #fff;
     background-color: transparent;
@@ -288,6 +288,22 @@ and (max-width: 480px) {
   p {
   font-size: 14px;
   }
+  ul.social-buttons li a {
+     display: inline-block;
+     vertical-align: baseline;
+      width: 50px;
+      height: 50px;
+      border-radius: 30%;
+      font-size: 10px;
+      line-height: 60px;
+      outline: 0;
+      color: #fff;
+      background-color: transparent;
+    /*  background-color: #222;*/
+      -webkit-transition: all .3s;
+      -moz-transition: all .3s;
+      transition: all .3s;
+  }
   ul.social-buttons i {
      padding-top: 12px;
   }
@@ -332,10 +348,10 @@ and (max-width: 768px) {
   ul.social-buttons li a {
      display: inline-block;
      vertical-align: baseline;
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      font-size: 0.7em;
+      width: 60px;
+      height: 60px;
+      border-radius: 30%;
+      font-size: 12px;
       line-height: 70px;
       outline: 0;
       color: #fff;
@@ -365,9 +381,9 @@ and (max-width: 1024px) {
   ul.social-buttons li a {
      display: inline-block;
      vertical-align: baseline;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
+      width: 70px;
+      height: 70px;
+      border-radius: 30%;
       font-size: 0.9em;
       line-height: 80px;
       outline: 0;
@@ -387,17 +403,20 @@ and (max-width: 1024px) {
 }
 
 @media screen
-and (min-width: 768px) {
+and (min-width: 1024px) {
 
-}
-
-
-@media screen
-and (min-width: 1224px) {
-
-}
-
-@media screen
-and (min-width: 1624px) {
+  ul.social-buttons li a {
+      width: 70px;
+      height: 70px;
+      border-radius: 25px 25px 25px 25px;
+      font-size: 16px;
+      line-height: 80px;
+      outline: 0;
+      color: #fff;
+      background-color: transparent;
+      -webkit-transition: all .3s;
+      -moz-transition: all .3s;
+      transition: all .3s;
+  }
 
 }
